css/style.css
@media only screen and (min-width: 320px) {
  * {
    margin: 0;
    padding: 0;
    border: none;
    box-sizing: border-box;
  }

  html {
    height: 100%;
    background-color: #e6faff;
  }

  body {
    height: 100%;
    background-color: #e6faff;
  }

  header {
    padding: 22px;
    text-align: center;
    background-color: #005b4b;
  }

  header a {
    text-decoration: none;
  }

  header img {
    position: absolute;
    top: 11px;
    left: 12px;
    height: 2cm;
    width: 2cm;
  }

  h1 {
    color:#ffffff;
    font-family: 'Roboto', sans-serif;
    margin-left: 20%;
    font-size: 45px;
  }

  nav {
    overflow: hidden;
    background-color: #ffffff;
    font-family: 'Roboto Condensed', sans-serif;
  }

  nav a {
    float: left;
    font-size: 16px;
    color: #000000;
    text-align: center;
    padding: 15px 19px;
    text-decoration: none;
  }

  .dropdown {
    float: left;
    overflow: hidden;
  }
  
  .dropdown .dropbtn {
    font-size: 16px;  
    border: none;
    outline: none;
    color: #000000;
    padding: 15px 31.3px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
  }
  
  nav a:hover, .dropdown:hover .dropbtn {
    background-color: #ffffb3;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #ffffff;
    min-width: 129.5px;
    z-index: 1;
  }
  
  .dropdown-content a {
    float: none;
    color: black;
    padding: 5px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
  .dropdown-content a:hover {
    background-color: #ffffb3;
  }
  
  .dropdown:hover .dropdown-content {
    display: block;
  }

  main {
    padding: 15px;
    background-color:#005b4b;
    min-height: 70%;
    box-sizing: border-box;
  }
 
  h2, h3 {
    font-family: 'Roboto Condensed', sans-serif;
    color: #ffffff;
  }

  p{
    font-family: 'Roboto Slab', serif;
    color: #ffffff;
    font-size: 15px;
  }
  
  section img {
    max-width: 100%;
    height: auto;
  
  }

  .welcome, .about {
    padding-bottom: 20px;
  }

  .circle-container{
    width: 300px;
    height: 300px;
    padding: 10px;
    border-style: solid;
    border-color: #ffffff;
    border-width: 1px;
    border-radius: 50%;
    margin: 0 auto;
  }

  #welcome-bg {
    background: url('..//assets/images/welcome.jpg') no-repeat center center;
    background-size: 400px;
    height: 260px;
    width: 260px;
    border-radius: 50%;
    margin-top: 3%;
    margin-left: 3%;
  }

  #about-bg {
    background: url('..//assets/images/about.jpeg') no-repeat center center;
    background-size: 400px;
    height: 260px;
    width: 260px;
    border-radius: 50%;
    margin-top: 3%;
    margin-left: 3%;
  }

  #contact-form {
    padding-top: 10px;
  }
  
  label {
    color:#ffffff;
    font-family: 'Roboto Condensed', sans-serif;
  }
  
  input[type=text], input[type=email], select {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
    font-family: 'Roboto Slab', serif;
  }
  
  textarea {
    width: 100%;
    height: 200px;
    padding: 12px;
    border: 1px solid #ccc;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
    font-family: 'Roboto Slab', serif;
  }
  
  input[type=submit] {
    background-color: #ffffff;
    color: #000000;
    padding: 12px 20px;
    border: none;
    cursor: pointer;
    font-family: 'Roboto Condensed', sans-serif;
  }
  
  input[type=submit]:hover {
    background-color: #FFFFB3;
  }
  
  footer {
    padding: 0%;
    background: #000000;
    color: #ffffff;
  }
  
  .social-media {
    text-align: center;
  }

  .social-media > li {
    display: inline;
  }

  .social-media i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #ffffff;
  }
  
  .copyright p {
    font-size: 10px;
    text-align: center;
  }

  #upload-area1 {
    margin-bottom: 15px;
  }

  #submit-button {
    margin-top: 15px;
  }

  article {
    margin-top: 15px;
  }

  iframe {
    height: 200px;
    width: 100%;
    margin-top: 15px;
    margin-bottom: 20px;
  }

  #home_hacks{
    margin-top: 20px;
  }

  #office_hacks{
    margin-top: 20px;
  }
}


@media only screen and (min-width: 481px) {
  header {
    padding: 40px;
  }

  h1 {
    font-size: 50px;
  }

  header img {
    height: 3cm;
    width: 3cm;
  }

  nav a {
    font-size: 25px;
    padding: 14px 33px;
  }
  
  .dropdown .dropbtn {
    font-size: 25px;  
    padding: 13px 33px;
  }

  .dropdown-content {
    min-width: 170px;
  }

  main {
    min-height: 75%;
  }
  
  h2 {
    font-size: 35px;
  }
  
  h3 {
    font-size: 30px;
  }

  p {
    font-size: 25px;
  }
  
  label, input, textarea {
    font-size: 25px;
  }

  iframe {
    height: 325px;
    padding-left: 10%;
    padding-right: 10%;
  }

  .social-media i {
    padding-bottom: 1%;
    padding-top: 2%;
    padding-left: 5%;
    padding-right: 5%;
  }
  
  .copyright p {
    font-size: 15px;
  }
}


@media only screen and (min-width: 769px) {
  header {
    padding-right: 15%;
  }

  nav a {
    padding: 14px 81px;
  }
  
  .dropdown .dropbtn {
    padding: 13px 81px;
  }

  .dropdown-content {
    min-width: 266.3px;
  }

  .circle-container{
    width: 400px;
    height: 400px;
  }

  #welcome-bg {
    background-size: 500px;
    height: 330px;
    width: 330px;
    margin-top: 6%;
    margin-left: 6%;
  }

  #about-bg {
    background-size: 500px;
    height: 330px;
    width: 330px;
    margin-top: 6%;
    margin-left: 6%;
  }

  iframe {
    height: 450px;
    padding-left: 10%;
    padding-right: 10%;
  }
  
  .social-media i {
    padding-bottom: 0.5%;
    padding-top: 2%;
    padding-left: 5%;
    padding-right: 5%;
  }
  .copyright p {
    padding-top: 1%;
  }
}


@media only screen and (min-width: 1025px) {
  header {
    padding-right: 20%;
  }

  h1 {
    font-size: 60px;
  }

  .dropdown .dropbtn {
    padding: 13px 80px;
  }

  .welcome-section {
    float: left; 
    width: 50%;
  }

  .welcome{
    padding-bottom: 8%;
    padding-left: 5%;
    padding-right: 5%;
  }

  .about{
    padding-left: 5%;
    padding-right: 5%;
    padding-bottom: 5%;
  }

  .about-section {
    float: right;
    width: 50%; 
  }

  .contact-section {
    padding-top: 90%;
    padding-left: 10%;
    padding-right: 10%;
  }

  .upload-section {
    padding-left: 10%;
    padding-right: 10%;
  }

  .social-media i {
    padding-bottom: 0.1%;
    padding-top: 1%;
  }

  iframe {
    height: 500px;
    padding-left: 20%;
    padding-right: 20%;
  }

  .copyright p {
    padding-top: 0.5%;
  }
}


@media only screen and (min-width: 1201px) {
  header img {
    position: absolute;
    top: 11px;
    left: 20%;
  }

  body {
    margin-top: 0%;
    margin-left: 15%;
    margin-right: 15%;
  }

  .contact-section {
    padding-top: 120%;
  }

  iframe {
    height: 300px;
    padding-left: 25%;
    padding-right: 25%;
  }
}


@media only screen and (min-width: 1300px) {
  .contact-section {
    padding-top: 110%;
  }

  iframe {
    height: 300px;
  }
}


@media only screen and (min-width: 1500px) {
  .contact-section {
    padding-top: 90%;
  }
}


@media only screen and (min-width: 1600px) {
  header img {
    position: absolute;
    left: 30%;
  }

  body {
    margin-left: 20%;
    margin-right: 20%;
  }

  .contact-section {
    padding-top: 85%;
  }
}


@media only screen and (min-width: 2200px) {
  body {
    margin-left: 26%;
    margin-right: 26%;
  }

  main {
    min-height: 70%;
  }

  .contact-section {
    padding-top: 70%;
  }

  iframe {
    height: 400px;
  }
}


@media only screen and (min-width: 2400px) {
  main {
    min-height: 77%;
  }
}

